Grid spacing fixes

--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -45,6 +45,7 @@ html {
 
 body {
 	font-family: var(--font-system);
+	font-size: 16px;
 	min-height: 100%;
 	position: relative;
 	background: white;
